...
    "Favorite Playlists" : {

    },
    "Favorite Tracks" : {

    },
    "Favorites" : {
      "comment" : "The title of the screen.",
      "isCommentAutoGenerated" : true
    },
    "Feature" : {

    },
...
    "Learning Data Reset" : {

    },
    "Learning Status" : {

    },
    "Library" : {

    },
    "Listening for cry" : {

    },
    "Listening..." : {
...
            "value" : "Erkennen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Detect"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Detectar"
...
            "value" : "Profil"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Profile"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Perfil"
...
